syntax = "proto3";

package pb;
option go_package = "github.com/Hayzerr/go-microservice-project/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

enum ProductTypeProto {
  PRODUCT_TYPE_PROTO_UNSPECIFIED = 0;
  TICKET = 1;
  MERCHANDISE = 2;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  ProductTypeProto type = 5;
  int32 stock = 6;
  string festival_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  ProductTypeProto type = 4;
  int32 stock = 5;
  string festival_id = 6;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  string id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.DoubleValue price = 4;
  ProductTypeProto type = 5;
  google.protobuf.Int32Value stock = 6;
  google.protobuf.StringValue festival_id = 7;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string id = 1;
}

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (google.protobuf.Empty);
}
